--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,97 @@
-*{
+html, body, h1, h2, h3, input, button, ul, li { 
     margin: 0;
+    border: 0;
     padding: 0;
+    font: inherit;
+    text-align: inherit;
+    text-decoration: inherit;
+    color: inherit;
+    background: transparent;
 }
-
-body{
-    position: relative;
-    font-family: sans-serif;
-}
-.flex{
+nav {
     display: flex;
-}
-.header{
-    position: fixed;
-    padding-top: 25px;
-    width: 100px;
-    background-color: white;
-    width: 100%;
-    line-height: 10vh;
-
-}
-.header-area{
+    justify-content: space-around;
     align-items: center;
-    width: 100%;
-
+    height: 55px;
 }
-.logo-area{
-    align-items:center ;
-    padding: 0 20px;
+nav #logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.logo-area a{
-    display: inline-block;
-    padding: 0 10px;
+nav #logo #hamburger{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.logo-area img{
-    width: 110px;
+nav #logo #hamburger i {
+    color: #606060;
 }
-.saerch-box{
-    flex: 2;
+nav #logo:hover {
+    cursor: pointer;
 }
-.saerch-box input{
-    width: 80%;
-    display: inline-block;
-    padding: .7em 1em;
-    border-radius: 4px;
-    border: 1 px solid rgb(212,190,190);
+nav #search_bar {
+    width: 45%;
+    display: flex;
+    justify-content: center;
 }
-.search-box input:focus{
-    border-radius: 5px;
+nav #search_bar #search_field {
+    border: 0.5px solid gray;
+    width: 90%;
+    height: 30px;
+    padding: 15px;
+    box-sizing: border-box;
 }
-.search area button{
-    padding: .7rem 2rem;
-    background: grey;
-    border-style: none;
-    border-radius: 0 4px 4px 0;
+nav #search_bar #search_button {
+    width: 10%;
+    height: 30px;
+    border: 0.5px solid gray; 
+    border-left: none;
+    padding: 15px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.search area button:hover{
-    background-color:rgba( 0,0,0,0.25);
+nav #search_bar #search_button i{
+    color: #888383;
+}
+nav #search_bar #search_button:hover{
+    cursor: pointer;
 } 
-.header icons{
-    
+
+nav #avatars_icons {
+    display: flex;
+    justify-content: space-between;  
+    align-items: center;               
+}
+
+nav #avatars_icons .icon{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;  
+    align-items: center; 
+}
+nav #avatars_icons .icon i {
+    color: #606060;
+}
+/* nav #avatars_icons .avatar {
+    border-radius: 50%;
+    border: 0.5px solid gray;
+    width: 35px;
+    height: 35px;
+} */
+/* nav #avatars_icons .avatar img {
+    width: 95%;
+    height: 95%;
+    display: block;
+} */
+
+
+#main {
+    background: #F9F9F9;
+    height: 800px;
 }
