--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-html, body, h1, h2, h3, input, button, ul, li, a { 
+/*
+    CSS Reset
+*/
+html, body, h1, h2, h3, h4, input, button, ul, li, a, p {
     margin: 0;
     border: 0;
     padding: 0;
@@ -7,6 +10,36 @@ html, body, h1, h2, h3, input, button, ul, li, a {
     text-decoration: inherit;
     color: inherit;
     background: transparent;
+}
+/*
+    Global css values settings
+*/
+body {
+    font-family: Roboto, sans-serif;
+}
+h2 {
+    font-size: 18px;
+}
+h3 {
+    font-size: 16px;
+}
+h4 {
+    font-size: 14px;
+}
+p {
+    font-size: 14px;
+}
+/*
+    Header and navigation
+*/
+header {
+    width: 100%;
+    height: 55px;
+    position: fixed;    /*the heade stays fixed when scrolling*/
+    top: 0;
+    background: white;
+    /*makes the header always on top when scrolling even if there are absolute elements*/
+    z-index: 1;
 }
 nav {
     display: flex;
@@ -153,4 +186,53 @@ main #video_detail #view_detail #reactions .icon{
 }
 main #video_detail #view_detail #reactions .icon {
     color: #606060;
+}
+
+main #channel_detail {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 16px;
+    margin-bottom: 12px;
+}
+main #channel_detail #channel_logo_name{
+    display: flex;
+    justify-content: left;
+}
+
+main #channel_detail #channel_logo{
+    margin-right: 10px;
+    width: 48px;
+    height: 48px;
+    background: green;
+    color: white;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+}
+main #channel_detail #channel_name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+main #channel_detail #channel_name h4{
+    font-weight: bold;
+}
+main #channel_detail #channel_name p{
+    font-size: 13px;
+    color: #697A87;
+}
+main #channel_detail #subscribe_button{
+    display: block;
+    background: #CC3532;
+    color: white;
+    padding: 10px 16px;
+    font-weight: bold;
+}
+main #video_description{
+    padding: 0 150px 24px 64px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #c5c1c1;
+}
+main #video_description p {
+    line-height: 1.5;
 }
