--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,18 @@
 /*
     CSS Reset
 */
-html, body, h1, h2, h3, h4, input, button, ul, li, a, p {
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+input,
+button,
+ul,
+li,
+a,
+p {
     margin: 0;
     border: 0;
     padding: 0;
@@ -11,65 +22,79 @@ html, body, h1, h2, h3, h4, input, button, ul, li, a, p {
     color: inherit;
     background: transparent;
 }
+
 /*
     Global css values settings
 */
 body {
     font-family: Roboto, sans-serif;
 }
+
 h2 {
     font-size: 18px;
 }
+
 h3 {
     font-size: 16px;
 }
+
 h4 {
     font-size: 14px;
 }
+
 p {
     font-size: 14px;
 }
+
 /*
     Header and navigation
 */
 header {
     width: 100%;
     height: 55px;
-    position: fixed;    /*the heade stays fixed when scrolling*/
+    position: fixed;
+    /*the heade stays fixed when scrolling*/
     top: 0;
     background: white;
     /*makes the header always on top when scrolling even if there are absolute elements*/
     z-index: 1;
 }
+
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 55px;
 }
+
 nav #logo {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-nav #logo #hamburger{
+
+nav #logo #hamburger {
     width: 40px;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 nav #logo #hamburger i {
     color: #606060;
 }
+
 nav #logo:hover {
     cursor: pointer;
 }
+
 nav #search_bar {
     width: 45%;
     display: flex;
     justify-content: center;
 }
+
 nav #search_bar #search_field {
     border: 0.5px solid gray;
     width: 90%;
@@ -77,10 +102,11 @@ nav #search_bar #search_field {
     padding: 15px;
     box-sizing: border-box;
 }
+
 nav #search_bar #search_button {
     width: 10%;
     height: 30px;
-    border: 0.5px solid gray; 
+    border: 0.5px solid gray;
     border-left: none;
     padding: 15px;
     box-sizing: border-box;
@@ -88,41 +114,47 @@ nav #search_bar #search_button {
     justify-content: center;
     align-items: center;
 }
-nav #search_bar #search_button i{
+
+nav #search_bar #search_button i {
     color: #888383;
 }
-nav #search_bar #search_button:hover{
+
+nav #search_bar #search_button:hover {
     cursor: pointer;
-} 
+}
 
 nav #avatars_icons {
     display: flex;
-    justify-content: space-between;  
-    align-items: center;               
+    justify-content: space-between;
+    align-items: center;
 }
 
-nav #avatars_icons .icon{
+nav #avatars_icons .icon {
     width: 40px;
     height: 40px;
     display: flex;
-    justify-content: space-between;  
-    align-items: center; 
+    justify-content: space-between;
+    align-items: center;
 }
+
 nav #avatars_icons .icon i {
     color: #606060;
 }
+
 nav #avatars_icons .avatar {
     border-radius: 50%;
     border: 0.5px solid gray;
     width: 35px;
     height: 35px;
     overflow: hidden;
-} 
+}
+
 nav #avatars_icons .avatar img {
     width: 100%;
     height: 100%;
     display: block;
 }
+
 /*
     Body
 */
@@ -139,6 +171,7 @@ nav #avatars_icons .avatar img {
 main {
     width: 57%;
 }
+
 main #playing_video {
     /*produces 16:9 aspect ratio for the iframe
     and the height of #playing_video changes based on the width of the iframe*/
@@ -147,13 +180,16 @@ main #playing_video {
     height: 0;
     padding-bottom: 56.25%;
 }
+
 main #playing_video iframe {
+    border-width: 0px;
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
 }
+
 main #video_detail {
     display: flex;
     flex-direction: column;
@@ -167,22 +203,26 @@ main #video_detail #view_detail {
     align-items: center;
     height: 40px;
 }
+
 main #video_detail #view_detail #view_num {
     display: flex;
     justify-content: right;
 }
 
-main #video_detail #view_detail #view_num p{
+main #video_detail #view_detail #view_num p {
     padding-right: 10px;
     color: #697A87;
 }
-main #video_detail #view_detail #reactions{
+
+main #video_detail #view_detail #reactions {
     display: flex;
     justify-content: left;
 }
-main #video_detail #view_detail #reactions .icon{
+
+main #video_detail #view_detail #reactions .icon {
     padding-left: 20px;
 }
+
 main #video_detail #view_detail #reactions .icon {
     color: #606060;
 }
@@ -193,12 +233,13 @@ main #channel_detail {
     padding-top: 16px;
     margin-bottom: 12px;
 }
-main #channel_detail #channel_logo_name{
+
+main #channel_detail #channel_logo_name {
     display: flex;
     justify-content: left;
 }
 
-main #channel_detail #channel_logo{
+main #channel_detail #channel_logo {
     margin-right: 10px;
     width: 48px;
     height: 48px;
@@ -208,54 +249,64 @@ main #channel_detail #channel_logo{
     display: grid;
     place-items: center;
 }
+
 main #channel_detail #channel_name {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-main #channel_detail #channel_name h4{
+
+main #channel_detail #channel_name h4 {
     font-weight: bold;
 }
-main #channel_detail #channel_name p{
+
+main #channel_detail #channel_name p {
     font-size: 13px;
     color: #697A87;
 }
-main #channel_detail #subscribe_button{
+
+main #channel_detail #subscribe_button {
     display: block;
     background: #CC3532;
     color: white;
     padding: 10px 16px;
     font-weight: bold;
 }
-main #video_description{
+
+main #video_description {
     padding: 0 150px 24px 64px;
     box-sizing: border-box;
     border-bottom: 1px solid #c5c1c1;
 }
+
 main #video_description p {
     line-height: 1.5;
 }
-*****************
-******************main #comment_section {
+
+main #comment_section {
     border-bottom: 1px solid #c5c1c1;
     margin-bottom: 10px;
 }
+
 main #comment_section #comment_head {
     display: flex;
     justify-content: start;
     padding-top: 24px;
     margin-bottom: 24px;
 }
+
 main #comment_section #comment_head h3 {
     font-weight: bold;
     margin-right: 25px;
 }
+
 main #comment_section #comment_input {
     display: flex;
     justify-content: flex-start;
     margin-bottom: 32px;
 }
-main #comment_section .avatar{
+
+main #comment_section .avatar {
     width: 48px;
     height: 48px;
     border-radius: 50%;
@@ -265,45 +316,54 @@ main #comment_section .avatar{
     place-items: center;
     margin-right: 15px;
 }
-main #comment_section .avatar img{
+
+main #comment_section .avatar img {
     width: 100%;
     height: 100%;
 }
+
 main #comment_section #comment_input input {
     flex-grow: 1;
     height: 15px;
     padding-bottom: 10px;
     border-bottom: 1px solid #c5c1c1;
 }
-main #comment_section #comments .comment{
+
+main #comment_section #comments .comment {
     display: flex;
     justify-content: flex-start;
     margin-bottom: 20px;
 }
-main #comment_section #comments .comment .comment_detail{
+
+main #comment_section #comments .comment .comment_detail {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 main #comment_section #comments .comment .comment_detail .commentor,
 main #comment_section #comments .comment .comment_detail .reactions {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-main #comment_section #comments .comment .comment_detail .commentor h4{
+
+main #comment_section #comments .comment .comment_detail .commentor h4 {
     font-weight: bold;
     margin: 0 10px 3px 0;
 }
-main #comment_section #comments .comment .comment_detail .commentor p{
+
+main #comment_section #comments .comment .comment_detail .commentor p {
     font-size: 13px;
     color: #697A87;
 
 }
+
 main #comment_section #comments .comment .comment_detail .text {
     margin-bottom: 15px;
 }
-main #comment_section #comments .comment .comment_detail .reactions a{
+
+main #comment_section #comments .comment .comment_detail .reactions a {
     margin-right: 18px;
     color: #606060;
 }
@@ -317,30 +377,35 @@ aside {
     flex-direction: column;
     justify-content: flex-start;
 }
+
 aside .suggestion {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 7px;
 }
-aside .suggestion .thumbnail img{
+
+aside .suggestion .thumbnail img {
     background: orange;
     width: 165px;
     height: 95px;
     margin-right: 5px;
 }
+
 aside .suggestion .thumbnail_description {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
+
 aside .suggestion .thumbnail_description p {
     margin-bottom: 5px;
     color: #606060;
     font-size: 13px;
 }
-aside .suggestion .thumbnail_description p:first-child{
+
+aside .suggestion .thumbnail_description p:first-child {
     font-weight: bold;
     color: black;
     font-size: 14px;
@@ -349,7 +414,7 @@ aside .suggestion .thumbnail_description p:first-child{
 /*
     Layout changes for screen size less than 1000px
 */
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1000px) {
     #content {
         display: flex;
         flex-direction: column;
@@ -358,7 +423,9 @@ aside .suggestion .thumbnail_description p:first-child{
         padding: 0 30px;
         padding-top: 80px;
     }
-    main, aside {
+
+    main,
+    aside {
         flex-grow: 1;
         width: 85%;
     }
